# OpenCV_CPP

./: CMakeLists.txt  README  a_imageBasics.cpp  b-imageBasics.cpp  c-imageBasics.cpp  d_imageBasics.cpp
a_image_basis/: a_basis.cpp  e_basis.cpp
b_image_rename/: CMakeLists.txt  rename.cpp
